@@ -1437,7 +1437,7 @@ static void print_device_statistics_page(const unsigned char * data, int page,
 
     // Skip unsupported entries
     unsigned char flags = data[offset+7];
-    if (!(flags & 0x80))
+    if (!(flags & 0x80) || !info)
       continue;
 
     // Get value size, default to max if unknown
@@ -1476,13 +1476,20 @@ static void print_device_statistics_page(const unsigned char * data, int page,
 }
 
 static bool print_device_statistics(ata_device * device, unsigned nsectors,
-  const std::vector<int> & single_pages, bool all_pages, bool ssd_page)
+  const std::vector<int> & single_pages, bool all_pages, bool ssd_page,
+  bool use_gplog)
 {
   // Read list of supported pages from page 0
   unsigned char page_0[512] = {0, };
-  if (!ataReadLogExt(device, 0x04, 0, 0, page_0, 1)) {
-    pout("Read Device Statistics page 0 failed\n\n");
-    return false;
+  int rc;
+  
+  if (use_gplog)
+  	rc = ataReadLogExt(device, 0x04, 0, 0, page_0, 1);
+  else
+  	rc = ataReadSmartLog(device, 0x04, page_0, 1);
+  if (!rc) {
+  	pout("Read Device Statistics page 0 failed\n\n");
+  	return false;
   }
 
   unsigned char nentries = page_0[8];
@@ -1519,7 +1526,8 @@ static bool print_device_statistics(ata_device * device, unsigned nsectors,
 
   // Print list of supported pages if requested
   if (print_page_0) {
-    pout("Device Statistics (GP Log 0x04) supported pages\n");
+    pout("Device Statistics (%s Log 0x04) supported pages\n", 
+    	use_gplog ? "GP" : "SMART");
     pout("Page Description\n");
     for (i = 0; i < nentries; i++) {
       int page = page_0[8+1+i];
@@ -1531,20 +1539,26 @@ static bool print_device_statistics(ata_device * device, unsigned nsectors,
 
   // Read & print pages
   if (!pages.empty()) {
-    pout("Device Statistics (GP Log 0x04)\n");
+    pout("Device Statistics (%s Log 0x04)\n",
+    	use_gplog ? "GP" : "SMART");
     pout("Page Offset Size         Value  Description\n");
     bool need_trailer = false;
-
+    
     for (i = 0; i <  pages.size(); i++) {
-      int page = pages[i];
-      unsigned char page_n[512] = {0, };
-      if (!ataReadLogExt(device, 0x04, 0, page, page_n, 1)) {
-        pout("Read Device Statistics page %d failed\n\n", page);
-        return false;
-      }
-      print_device_statistics_page(page_n, page, need_trailer);
+    	int page = pages[i];
+    	unsigned char page_n[512 * 8] = {0, };
+    	if (use_gplog)
+    		rc = ataReadLogExt(device, 0x04, 0, page, page_n, 1);
+    	else
+    		rc = ataReadSmartLog(device, 0x04, page_n, page + 1); 
+    	if (!rc) {
+    		pout("Read Device Statistics page %d failed\n\n", page);
+    		return false;
+    	}
+    	int offset = (use_gplog ? 0 : 512 * page);
+    	print_device_statistics_page(page_n + offset, page, need_trailer);
     }
-
+    
     if (need_trailer)
       pout("%30s|_ ~ normalized value\n", "");
     pout("\n");
@@ -2450,7 +2464,12 @@ int ataPrintMain (ata_device * device, const ata_print_options & options)
   );
 
   // SMART and GP log directories needed ?
-  bool need_smart_logdir = options.smart_logdir;
+  bool need_smart_logdir = ( 
+  	  options.smart_logdir
+       || options.devstat_all_pages // devstat fallback to smartlog if needed
+       || options.devstat_ssd_page
+       || !options.devstat_pages.empty()
+  );
 
   bool need_gp_logdir  = (
           options.gp_logdir
@@ -3338,11 +3357,18 @@ int ataPrintMain (ata_device * device, const ata_print_options & options)
 
   // Print Device Statistics
   if (options.devstat_all_pages || options.devstat_ssd_page || !options.devstat_pages.empty()) {
-    unsigned nsectors = GetNumLogSectors(gplogdir, 0x04, true);
+    bool use_gplog = true;
+    unsigned nsectors = 0;
+    if (gplogdir) 
+    	    nsectors = GetNumLogSectors(gplogdir, 0x04, false);
+    else if (smartlogdir){ // for systems without ATA_READ_LOG_EXT
+    	    nsectors = GetNumLogSectors(smartlogdir, 0x04, false);
+    	    use_gplog = false;
+    }
     if (!nsectors)
-      pout("Device Statistics (GP Log 0x04) not supported\n\n");
+      pout("Device Statistics (GP/SMART Log 0x04) not supported\n\n");
     else if (!print_device_statistics(device, nsectors, options.devstat_pages,
-               options.devstat_all_pages, options.devstat_ssd_page))
+               options.devstat_all_pages, options.devstat_ssd_page, use_gplog))
       failuretest(OPTIONAL_CMD, returnval|=FAILSMART);
   }
 
